--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 						</nav>
 					</header>
 
+					<script src="https://embed.github.com/view/3d/George-Paizakis/George-Paizakis.github.io/main/assets/Wall-E/Wall-E.stl"></script>
+
 				<!-- Menu -->
 					<nav id="menu">
 						<div class="inner">
