--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
  
     <h2>Introduction</h2>
    <p>This project focuses on designing a robotic parrot prototype as part of the Robotic Modelling and Drone Skin Design module. The goal was to explore both virtual and physical prototyping processes, beginning with hand-drawn sketches to visualize the concept and inform later stages of CAD and physical design.</p>
+<img src="images/sketches/parrot_sketch1.jpeg" alt="Initial sketch of parrot" width="400">
 
 </section>
 
