--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
 </nav>
 
 <section id="introduction">
- 
     <h2>Introduction</h2>
    <p>This project focuses on designing a robotic parrot prototype as part of the Robotic Modelling and Drone Skin Design module. The goal was to explore both virtual and physical prototyping processes, beginning with hand-drawn sketches to visualize the concept and inform later stages of CAD and physical design.</p>
 <img src="images/sketches/parrot_sketch1.jpeg" alt="Initial sketch of parrot" width="400">
-
 </section>
 
 <section id="virtual">
     <h2>Virtual Prototype</h2>
-    <p>This section shows your virtual (3D model) prototypes.</p>
+    <p>Using Blender, the parrot sketch was translated into a virtual 3D model. The design focused on recreating key features such as the beak, wings, and body shape. The modelling process involved sculpting, mirroring, and basic mesh editing tools to create a smooth, organic structure that resembles a parrot.</p>
 </section>
 
 <section id="physical">
