--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <section id="virtual">
     <h2>Virtual Prototype</h2>
     <p>Using Blender, the parrot sketch was translated into a virtual 3D model. The design focused on recreating key features such as the beak, wings, and body shape. The modelling process involved sculpting, mirroring, and basic mesh editing tools to create a smooth, organic structure that resembles a parrot.</p>
+    <img src="images/3d_models/parrot_model1.png" alt="3D model of parrot" width="400">
 </section>
 
 <section id="physical">
