--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
 <section id="physical">
     <h2>Physical Prototype</h2>
-    <p>This section includes your physical 3D printed model.</p>
+    <p>The group intends to 3D print the parrot model. The current plan is to separate the model into multiple parts such as the body, wings, beak, and claws to simplify the printing and assembly process. Once printed, the components will be assembled. After assembly, the final prototype will be evaluated for balance, proportion, and realism to reflect the initial design intent. We also plan to incorporate basic articulation in the wings or neck to simulate simple robotic movement.</p>
 </section>
+
 
 <section id="appraisal">
     <h2>Critical Appraisal</h2>
