--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
 
 <section id="appraisal">
     <h2>Critical Appraisal</h2>
-    <p>This section evaluates your prototyping techniques.</p>
+    <p>Throughout this project, various tools and techniques have been explored to develop the parrot prototype. Blender was selected for 3D modelling due to its powerful sculpting tools and flexibility in creating organic shapes, which suited the parrot’s curved and feathered form. The group found it particularly effective for designing naturalistic body features compared to rigid CAD software.</p>
+
+    <p>3D printing was chosen as the method for physical prototyping, specifically using PLA filament. This material was selected for its ease of use, low cost, and availability, making it ideal for producing rapid prototypes. However, the team anticipates some limitations with print resolution and strength, particularly for smaller or delicate features such as the beak or claws.</p>
+
+    <p>Alternative methods such as resin printing, laser cutting, or composite materials were considered. Resin printing could offer finer detail but would increase cost and complexity. Laser cutting was deemed unsuitable due to the organic nature of the parrot design. Overall, the selected methods balance realism, practicality, and affordability, making them appropriate for this academic project.</p>
 </section>
+
 
 <section id="references">
     <h2>References</h2>
