--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <section id="appraisal">
     <h2>Critical Appraisal</h2>
-    <p>Throughout this project, various tools and techniques have been explored to develop the parrot prototype. Blender was selected for 3D modelling due to its powerful sculpting tools and flexibility in creating organic shapes, which suited the parrot’s curved and feathered form. The group found it particularly effective for designing naturalistic body features compared to rigid CAD software.</p>
+    <p>Throughout this project, various tools and techniques have been explored to develop the parrot prototype. Blender was selected for 3D modelling due to its powerful sculpting tools and flexibility in creating organic shapes, which suited the parrot’s curved and feathered form. The group found it particularly effective for designing naturalistic body features.</p>
 
     <p>3D printing was chosen as the method for physical prototyping, specifically using PLA filament. This material was selected for its ease of use, low cost, and availability, making it ideal for producing rapid prototypes. However, the team anticipates some limitations with print resolution and strength, particularly for smaller or delicate features such as the beak or claws.</p>
 
