--- a/index.html
+++ b/index.html
@@ -1,54 +1,133 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Robotic Parrot Prototype Portfolio</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body>
+<body class="is-preload">
 
-<h1>Robotic Parrot Prototype Portfolio</h1>
+<!-- Page Wrapper -->
+<div id="page-wrapper">
 
-<nav>
-    <ul>
-        <li><a href="#introduction">Introduction</a></li>
-        <li><a href="#virtual">Virtual Prototype</a></li>
-        <li><a href="#physical">Physical Prototype</a></li>
-        <li><a href="#appraisal">Critical Appraisal</a></li>
-        <li><a href="#references">References</a></li>
-    </ul>
-</nav>
+    <!-- Header -->
+    <header id="header" class="alt">
+        <h1><a href="index.html">Parrot Prototype</a></h1>
+        <nav>
+            <a href="#menu">Menu</a>
+        </nav>
+    </header>
 
-<section id="introduction">
-    <h2>Introduction</h2>
-   <p>This project focuses on designing a robotic parrot prototype as part of the Robotic Modelling and Drone Skin Design module. The goal was to explore both virtual and physical prototyping processes, beginning with hand-drawn sketches to visualize the concept and inform later stages of CAD and physical design.</p>
-<img src="images/sketches/parrot_sketch1.jpeg" alt="Initial sketch of parrot" width="400">
-</section>
+    <!-- Menu -->
+    <nav id="menu">
+        <div class="inner">
+            <h2>Menu</h2>
+            <ul class="links">
+                <li><a href="#intro">Introduction</a></li>
+                <li><a href="#virtual">Virtual Prototype</a></li>
+                <li><a href="#physical">Physical Prototype</a></li>
+                <li><a href="#appraisal">Critical Appraisal</a></li>
+                <li><a href="#references">References</a></li>
+            </ul>
+            <a href="#" class="close">Close</a>
+        </div>
+    </nav>
 
-<section id="virtual">
-    <h2>Virtual Prototype</h2>
-    <p>Using Blender, the parrot sketch was translated into a virtual 3D model. The design focused on recreating key features such as the beak, wings, and body shape. The modelling process involved sculpting, mirroring, and basic mesh editing tools to create a smooth, organic structure that resembles a parrot.</p>
-    <img src="images/3d_models/parrot_model1.png" alt="3D model of parrot" width="400">
-</section>
+    <!-- Banner -->
+    <section id="banner">
+        <div class="inner">
+            <div class="logo"><span class="icon fa-feather"></span></div>
+            <h2>Robotic Parrot Prototype</h2>
+            <p>A project for the Robotic Modelling and Drone Skin Design module</p>
+        </div>
+    </section>
 
-<section id="physical">
-    <h2>Physical Prototype</h2>
-    <p>The group intends to 3D print the parrot model. The current plan is to separate the model into multiple parts such as the body, wings, beak, and claws to simplify the printing and assembly process. Once printed, the components will be assembled. After assembly, the final prototype will be evaluated for balance, proportion, and realism to reflect the initial design intent. We also plan to incorporate basic articulation in the wings or neck to simulate simple robotic movement.</p>
-</section>
+    <!-- Main Sections -->
+    <section id="wrapper">
 
+        <!-- Introduction -->
+        <section id="intro" class="wrapper spotlight style1">
+            <div class="inner">
+                <img src="images/sketches/parrot_sketch1.jpeg" alt="Initial sketch of parrot" class="image" style="max-width: 300px; margin-right: 20px;" />
+                <div class="content">
+                    <h2 class="major">Introduction</h2>
+                    <p>This project focuses on designing a robotic parrot prototype as part of the Robotic Modelling and Drone Skin Design module. The goal was to explore both virtual and physical prototyping processes, beginning with hand-drawn sketches to visualize the concept and inform later stages of CAD and physical design.</p>
+                </div>
+            </div>
+        </section>
 
-<section id="appraisal">
-    <h2>Critical Appraisal</h2>
-    <p>Throughout this project, various tools and techniques have been explored to develop the parrot prototype. Blender was selected for 3D modelling due to its powerful sculpting tools and flexibility in creating organic shapes, which suited the parrot’s curved and feathered form. The group found it particularly effective for designing naturalistic body features.</p>
+        <!-- Virtual Prototype -->
+        <section id="virtual" class="wrapper alt spotlight style2">
+            <div class="inner">
+                <img src="images/3d_models/parrot_model1.png" alt="3D model of parrot" class="image" style="max-width: 300px; margin-right: 20px;" />
+                <div class="content">
+                    <h2 class="major">Virtual Prototype</h2>
+                    <p>Using Blender, the parrot sketch was translated into a virtual 3D model. The design focused on recreating key features such as the beak, wings, and body shape. The modelling process involved sculpting, mirroring, and basic mesh editing tools to create a smooth, organic structure that resembles a parrot.</p>
+                </div>
+            </div>
+        </section>
 
-    <p>Alternative methods such as resin printing, laser cutting, or composite materials were considered. Resin printing could offer finer detail but would increase cost and complexity. Laser cutting was deemed unsuitable due to the organic nature of the parrot design. Overall, the selected methods balance realism, practicality, and affordability, making them appropriate for this academic project.</p>
-</section>
+        <!-- Physical Prototype -->
+        <section id="physical" class="wrapper spotlight style3">
+            <div class="inner">
+                <div class="content">
+                    <h2 class="major">Physical Prototype</h2>
+                    <p>The group intends to 3D print the parrot model using PLA filament. The current plan is to separate the model into multiple parts such as the body, wings, beak, and claws to simplify the printing and assembly process. Once printed, the components will be assembled using snap-fit joints or adhesives depending on tolerances. After assembly, the final prototype will be evaluated for balance, proportion, and realism to reflect the initial design intent. We also plan to incorporate basic articulation in the wings or neck to simulate simple robotic movement.</p>
+                </div>
+            </div>
+        </section>
 
+        <!-- Critical Appraisal -->
+        <section id="appraisal" class="wrapper alt style1">
+            <div class="inner">
+                <h2 class="major">Critical Appraisal</h2>
+                <p>Throughout this project, various tools and techniques have been explored to develop the parrot prototype. Blender was selected for 3D modelling due to its powerful sculpting tools and flexibility in creating organic shapes, which suited the parrot’s curved and feathered form. The group found it particularly effective for designing naturalistic body features compared to rigid CAD software.</p>
+                <p>3D printing was chosen as the method for physical prototyping, specifically using PLA filament. This material was selected for its ease of use, low cost, and availability, making it ideal for producing rapid prototypes. However, the team anticipates some limitations with print resolution and strength, particularly for smaller or delicate features such as the beak or claws.</p>
+                <p>Alternative methods such as resin printing, laser cutting, or composite materials were considered. Resin printing could offer finer detail but would increase cost and complexity. Laser cutting was deemed unsuitable due to the organic nature of the parrot design. Overall, the selected methods balance realism, practicality, and affordability, making them appropriate for this academic project.</p>
+            </div>
+        </section>
 
-<section id="references">
-    <h2>References</h2>
-    <p>List your references here.</p>
-</section>
+        <!-- References -->
+        <section id="references" class="wrapper style2">
+            <div class="inner">
+                <h2 class="major">References</h2>
+                <ul>
+                    <li>Blender Foundation. (2024). Blender Documentation. Available at: https://docs.blender.org</li>
+                    <li>Prusa Knowledge Base. (2024). PLA Filament Guide. Available at: https://help.prusa3d.com</li>
+                    <li>HTML5 UP. (n.d.). Solid State Template. Available at: https://html5up.net/solid-state</li>
+                </ul>
+            </div>
+        </section>
+
+    </section>
+
+    <!-- Footer -->
+    <section id="footer">
+        <div class="inner">
+            <h2 class="major">Get in touch</h2>
+            <p>Contact the project team via GitHub or through the university portal for further information or collaboration inquiries.</p>
+            <ul class="contact">
+                <li class="icon brands fa-github"><a href="https://github.com/George-Paizakis">George-Paizakis on GitHub</a></li>
+                <li class="icon solid fa-envelope"><a href="#">your-email@university.ac.uk</a></li>
+            </ul>
+            <ul class="copyright">
+                <li>&copy; George Paizakis. All rights reserved.</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </div>
+    </section>
+
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 
 </body>
 </html>
