--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="inner">
                 <div class="content">
                     <h2 class="major">Physical Prototype</h2>
-                    <p>The group intends to 3D print the parrot model using PLA filament. The current plan is to separate the model into multiple parts such as the body, wings, beak, and claws to simplify the printing and assembly process. Once printed, the components will be assembled using snap-fit joints or adhesives depending on tolerances. After assembly, the final prototype will be evaluated for balance, proportion, and realism to reflect the initial design intent. We also plan to incorporate basic articulation in the wings or neck to simulate simple robotic movement.</p>
+                    <p>The group intends to 3D print the parrot model using PLA filament. The current plan is to separate the model into multiple parts such as the body, wings, beak, and claws to simplify the printing and assembly process. Once printed, the components will be assembled. After assembly, the final prototype will be evaluated for balance, proportion, and realism to reflect the initial design intent. We also plan to incorporate basic articulation in the wings or neck to simulate simple robotic movement.</p>
                 </div>
             </div>
         </section>
@@ -83,7 +83,7 @@
         <section id="appraisal" class="wrapper alt style1">
             <div class="inner">
                 <h2 class="major">Critical Appraisal</h2>
-                <p>Throughout this project, various tools and techniques have been explored to develop the parrot prototype. Blender was selected for 3D modelling due to its powerful sculpting tools and flexibility in creating organic shapes, which suited the parrot’s curved and feathered form. The group found it particularly effective for designing naturalistic body features compared to rigid CAD software.</p>
+                <p>Throughout this project, various tools and techniques have been explored to develop the parrot prototype. Blender was selected for 3D modelling due to its powerful sculpting tools and flexibility in creating organic shapes, which suited the parrot’s curved and feathered form. The group found it particularly effective for designing naturalistic body features.</p>
                 <p>3D printing was chosen as the method for physical prototyping, specifically using PLA filament. This material was selected for its ease of use, low cost, and availability, making it ideal for producing rapid prototypes. However, the team anticipates some limitations with print resolution and strength, particularly for smaller or delicate features such as the beak or claws.</p>
                 <p>Alternative methods such as resin printing, laser cutting, or composite materials were considered. Resin printing could offer finer detail but would increase cost and complexity. Laser cutting was deemed unsuitable due to the organic nature of the parrot design. Overall, the selected methods balance realism, practicality, and affordability, making them appropriate for this academic project.</p>
             </div>
