--- a/index.html
+++ b/index.html
@@ -117,18 +117,26 @@
             </div>
         </section>
 
-        <!-- Conclusion -->
+   <!-- Conclusion -->
 <section id="conclusion" class="wrapper spotlight style2">
     <div class="inner">
         <div class="content">
             <h2 class="major">Conclusion</h2>
             <p>The development of the robotic parrot prototype provided a comprehensive experience in conceptual design, digital modelling, and planning for physical fabrication. Although the final prototype has not yet been physically printed, the process of transitioning from sketches to a detailed 3D model offered invaluable insight into the practicalities and challenges of multidisciplinary prototyping. This project has highlighted the importance of early design exploration, as the initial sketching phase helped shape both the creative and technical direction of the final concept.</p>
+
             <p>By working with 3D modelling software such as Blender, the group was able to bring the vision of the parrot to life in a virtual space. Blender’s tools enabled the modelling of complex organic forms, symmetrical structures, and detailed features — all of which contributed to a digital prototype that balances realism with feasibility. While a reference model was used at the start, deliberate effort was made to modify, personalise, and evolve the design to reflect the group’s own creative intentions.</p>
+
             <p>The fabrication planning process reinforced the importance of considering material properties, printer constraints, and assembly logic even during the design phase. Although 3D printing has not yet been carried out, careful thought has been given to part separation, joint design, and post-processing. This foresight ensures that once printing begins, the process will be efficient and guided by a clear strategy.</p>
+
+            <p>Another key outcome of this project was the opportunity to work collaboratively in a group setting. Tasks were divided based on individual strengths, and regular discussions helped refine design decisions and challenge assumptions. This collaborative environment mirrored real-world product development processes and encouraged valuable teamwork and communication skills.</p>
+
+            <p>Furthermore, this project provided a realistic introduction to how industry and academia intersect in the field of prototyping. The decisions made were not just creative but had to take into account material limitations, software capabilities, and time constraints — all of which reflect common challenges in engineering and design disciplines. These limitations fostered innovation within boundaries, pushing the group to think critically at every step.</p>
+
             <p>In conclusion, this project represents a strong foundation for future development. It showcases an understanding of both the artistic and technical aspects of prototyping and reflects the potential for continued growth. Should time and resources allow, future iterations of the parrot could involve robotic movement, interactive features, or improved physical realism. Regardless, the project has already succeeded in demonstrating a complete design process from concept to planned execution, and it reflects both individual contribution and collaborative effort in solving a creative engineering challenge.</p>
         </div>
     </div>
 </section>
+
 
         <!-- References -->
         <section id="references" class="wrapper style2">
