--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <div id="page-wrapper">
 
     <!-- Header -->
-    <header id="header" class="alt">
-        <h1><a href="index.html">Parrot Prototype</a></h1>
-        <nav>
-            <a href="#menu">Menu</a>
-        </nav>
-    </header>
+<header id="header" class="alt">
+  <img src="images/header.jpg" alt="Robotic Parrot" style="width:100%; height:auto;" />
+  <h1><a href="index.html">Solid State</a></h1>
+  <nav>
+    <a href="#menu">Menu</a>
+  </nav>
+</header>
+
 
     <!-- Menu -->
     <nav id="menu">
