--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Header -->
 <header id="header" class="alt">
-  <img src="images/header.jpg" alt="Robotic Parrot" style="width:100%; height:auto;" />
+  <img src="images/3d_models/Header_Parrot.png" alt="Robotic Parrot" style="width:100%; height:auto;" />
   <h1><a href="index.html">Solid State</a></h1>
   <nav>
     <a href="#menu">Menu</a>
