--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
 <header id="header" class="alt">
   <img src="images/3d_models/Header_Parrot.png" alt="Robotic Parrot" style="width:10%; height:10;" />
-  <h1><a href="index.html">Solid State</a></h1>
+  <h1><a href="index.html">Jump to Start?</a></h1>
   <nav>
     <a href="#menu">Menu</a>
   </nav>
