--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p>Contact the project team via GitHub or through the university portal for further information or collaboration inquiries.</p>
             <ul class="contact">
                 <li class="icon brands fa-github"><a href="https://github.com/George-Paizakis">George-Paizakis on GitHub</a></li>
-                <li class="icon solid fa-envelope"><a href="#">your-email@university.ac.uk</a></li>
+                <li class="icon solid fa-envelope"><a href="#">p016217k@student.staffs.ac.uk</a></li>
             </ul>
             <ul class="copyright">
                 <li>&copy; George Paizakis. All rights reserved.</li>
