--- a/index.html
+++ b/index.html
@@ -144,9 +144,17 @@
             <div class="inner">
                 <h2 class="major">References</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Adami, C.R., Rodrigues, I.C., Rodrigues, L.C., Frassini, R., Ely, M.R., Beltrami, L.V.R., Piazza, D., Lazzari, L.K., Júnior, H.L.O., Zattera, A.J. & Gamba, T.O. (2025). 3D-printed resins used in occlusal splints modified with graphene nanoplatelets. Discover Materials. 5 (1).</li>
+                    <li>Antão, M., Rodrigues, I., Quintão, C. & Quaresma, C. (2025). Ortho-Monitorizer: A portable device for quantitative monitoring of temperature and pressure in a 3D-printed upper limb orthosis. Journal of Hand Therapy.</li>
+                    <li>Baudouin, R., Amelot, A., Huynh-Charlier, I., Lisan, Q., Hans, S. & Charlier, P. (2024). Three-dimensional reconstruction of King Henri IV’s paranasal sinuses and mastoid cells. Clinical Anatomy.</li>
+                    <li>Gao, B., Tang, K., Deng, Z., Chen, Z., Yuan, L. & Wang, W. (2025). A review of laser-assisted cutting of hard and brittle materials: Tools, devices and mechanisms. Optics and Laser Technology. 189.</li>
+                    <li>Hussain, S., Lee, C.K.M., Tsang, Y.P. & Waqar, S. (2025). A machine learning-based recommendation framework for material extrusion fabricated triply periodic minimal surface lattice structures. Journal of Materials Science: Materials in Engineering. 20 (1).</li>
+                    <li>Kaiahara, F.H., Pizi, E.C.G., Straioto, F.G., Galvani, L.D., Kuga, M.C., Arrué, T.A., Junior, A.R., Só, M.V.R., Pereira, J.R. & Vidotti, H. (2025). Influence of Printing Orientation on the Mechanical Properties of Provisional Polymeric Materials Produced by 3D Printing. Polymers. 17 (3).</li>
+                    <li>Li, W., Liu, H., Lu, Y., Yin, X., Liang, Q. & Ren, T. (2025). Research on the rigid preparation method of flexible micro coils for flexible self powered electrical devices using laser cutting technology. Optics and Laser Technology. 188.</li>
+                    <li>Matygov, M., Ashkhotova, A. & Sokolov, V. (2025). Comparative analysis of engineering tools for modeling and analysis P. S. Stanimirović, A. Stupina, I. Kovalev, S. D. Mourtas, & J. K. Sahoo (eds.). ITM Web of Conferences. [Online]. 72. p.p. 02001. Available from: https://www.itm-conferences.org/10.1051/itmconf/20257202001.</li>
+                    <li>Saravana Mohan, H., Murugaraj, K., Solaiappan, S.K., Stanislaus Arputharaj, B., Rajendran, P., Lee, I.E., Jayakumar, S.S., Veeraperumal Senthil Nathan, J.P., Karuppasamy, A. & Raja, V. (2025). Design, Dynamics and Development of Upgraded Tiltable Wing associated Quadcopter through Advanced computational simulations incorporated Bottom-Up Approach. Scientific Reports. 15 (1).</li>
+                    <li>Vieira, A.G., Santa-Cruz, P. d’Amorim & Pavão, A.C. (2025). 3D-printable nanocomposite for the production of unique nanotextured surfaces: art-inspired distribution of magnetic nanorods. Journal of Materials Science: Materials in Engineering. 20 (1).</li>
+                    <li>Yang, K., Liu, Y., Tuo, B., Pan, Y., Wang, X., Zhang, L. & Wang, L. (2025). A multi-level multi-domain digital twin modeling method for industrial robots. Robotics and Computer-Integrated Manufacturing. 95.</li>
                 </ul>
             </div>
         </section>
